# storage/api-docs/api-docs.json
@@ -459,6 +459,283 @@
                 }
             }
         },
+        "/api/notifications": {
+            "get": {
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "Получить уведомления для текущего пользователя",
+                "operationId": "911565ad9aff9ba7eded3f189509e578",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/notifications/send": {
+            "post": {
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "Отправить системное уведомление всем пользователям",
+                "operationId": "1f8fb63492558296813bfb109b33261e",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "message": {
+                                        "type": "string",
+                                        "example": "Notification Message"
+                                    },
+                                    "title": {
+                                        "type": "string",
+                                        "example": "Notification Title"
+                                    },
+                                    "type": {
+                                        "type": "string",
+                                        "example": "info"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "System notification sent successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "System notification sent successfully"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "title": {
+                                                    "type": "string",
+                                                    "example": "Notification Title"
+                                                },
+                                                "message": {
+                                                    "type": "string",
+                                                    "example": "Notification Message"
+                                                },
+                                                "type": {
+                                                    "type": "string",
+                                                    "example": "info"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Unauthorized"
+                    }
+                }
+            }
+        },
+        "/api/notifications/send-to-user": {
+            "post": {
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "Отправить персональное уведомление конкретному пользователю",
+                "operationId": "3a225598d59bf38c2c3e202845a6e16e",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "user_id": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "message": {
+                                        "type": "string",
+                                        "example": "Notification Message"
+                                    },
+                                    "title": {
+                                        "type": "string",
+                                        "example": "Notification Title"
+                                    },
+                                    "type": {
+                                        "type": "string",
+                                        "example": "info"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "User notification sent successfully"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "user_id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "user_name": {
+                                                    "type": "string",
+                                                    "example": "John Doe"
+                                                },
+                                                "title": {
+                                                    "type": "string",
+                                                    "example": "Notification Title"
+                                                },
+                                                "message": {
+                                                    "type": "string",
+                                                    "example": "Notification Message"
+                                                },
+                                                "type": {
+                                                    "type": "string",
+                                                    "example": "info"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Unauthorized"
+                    }
+                }
+            }
+        },
+        "/api/notifications/{id}/read": {
+            "put": {
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "Отметить уведомление как прочитанное",
+                "operationId": "14ca05f271f4c57f1f368b868ab34446",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/notifications/mark-all-read": {
+            "put": {
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "Отметить все уведомления как прочитанные",
+                "operationId": "86f3da5bc5f6b7bf72a6ebef6c45fc38",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/notifications/{id}": {
+            "delete": {
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "Удалить уведомление",
+                "operationId": "54c4eb5ec5dc0d1e2916cec2fced1056",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/notifications/clear-all": {
+            "delete": {
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "Очистить все уведомления",
+                "operationId": "418f829c991b30fbe924c55f09c87846",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/permissions": {
             "get": {
                 "tags": [
@@ -2635,6 +2912,10 @@
         {
             "name": "Warehouse Stocks",
             "description": "Warehouse Stocks API"
+        },
+        {
+            "name": "Notifications",
+            "description": "Notifications"
         }
     ]
 }
